# final-project-rust

./: .gitignore  Cargo.toml  README.md  index.html  main.html  main.js  package-lock.json  package.json  project_idea.md  todo.txt  webdriver.json  webpack.config.js
src/: account_html.rs  dividers_game.rs  fetch_history.rs  game.rs  game_abstract_class.rs  game_buttons.rs  game_html_template.rs  game_utils.rs  gcd_game.rs  lib.rs  macros.rs  mainpage_html.rs  models.rs
tests/: game_utils_tests.rs  integration_tests.rs
tokio-db/: .gitignore  Cargo.toml
tokio-db/src/: credentials.rs  db.rs  handler.rs  main.rs  models.rs  request.rs  websockets.rs
