[package]
authors = ["The wasm-bindgen Developers"]
edition = "2021"
name = "dom"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }


[dependencies.web-sys]
version = "0.3"
features = ['Document', 'Element', 'HtmlElement', 'HtmlInputElement' ,'Node', 'Window']
