[package]
name = "websys"
version = "0.0.0"
authors = ["The wasm-bindgen Developers"]
edition = "2021"
publish = false

[lib]
name = "websys"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ['Document', 'Element', 'HtmlElement', 'HtmlInputElement' ,'Node', 'Window', 'Request', 'Response', 'console']

[dev-dependencies]
wasm-bindgen-test = "0.3"
