[package]
name = "tokio-db"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
anyhow = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix = "0.13"
actix-web = "4.0"
actix-web-actors = "4.0"
actix-cors = "0.6"
env_logger = "0.9"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
